--- a/app/src/main/res/layout/content_com_parse_ui_parse_login_fragment.xml
+++ b/app/src/main/res/layout/content_com_parse_ui_parse_login_fragment.xml
@@ -50,7 +50,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Sign Up"/>
+                android:text="Sign Up"
+                android:id="@+id/login_email"/>
 
             <Button
                 android:layout_width="0dp"
