--- a/app/src/main/res/layout/content_com_parse_ui_parse_login_fragment.xml
+++ b/app/src/main/res/layout/content_com_parse_ui_parse_login_fragment.xml
@@ -33,31 +33,40 @@
             android:layout_marginBottom="8dp"/>
 
         <Button
+            android:id="@+id/twitter_login"
             style="@style/ParseLoginUI.Button.ThirdPartyLogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@mipmap/ic_mail_black_24dp"
-            android:background="#d7d9d9"
-            android:text="Log in with Email"
-            android:textColor="#000000" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/com_parse_ui_twitter_login_button_background_selector"
+            android:drawableLeft="@drawable/com_parse_ui_twitter_login_logo"
+            android:text="@string/com_parse_ui_twitter_login_button_label"
+            android:layout_marginBottom="8dp"/>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
+                android:id="@+id/parse_signup_textview"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Sign Up"
-                android:id="@+id/login_email"/>
+                android:gravity=""
+                android:drawableLeft="@mipmap/ic_perm_identity_white_24dp"
+                android:textColor="@android:color/white"/>
 
-            <Button
+            <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Just trying" />
+                android:text="Just trying"
+                android:gravity="center"
+                android:id="@+id/button_just_trying"
+                android:textColor="@android:color/white"/>
         </LinearLayout>
     </LinearLayout>
 
