--- a/app/src/main/res/layout/content_com_parse_ui_parse_login_fragment.xml
+++ b/app/src/main/res/layout/content_com_parse_ui_parse_login_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/hamburger_rolls_onions_poppy_stuffing_french_fries_fast_food_20951_1080x1920"
+    android:background="@mipmap/bg_login"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -63,7 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Just trying"
+                android:text="Just want to browse"
                 android:gravity="center"
                 android:id="@+id/button_just_trying"
                 android:textColor="@android:color/white"/>
