--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#E0E0E0"
     tools:context="com.example.priyanshu.crumbs.MainActivity">
 
     <android.support.design.widget.AppBarLayout
