--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,18 +8,7 @@
     android:orientation="vertical"
     tools:context="com.example.priyanshu.crumbs.MainActivity"
     tools:showIn="@layout/activity_main">
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
-
-    </android.support.design.widget.AppBarLayout>
     <FrameLayout
         android:id="@android:id/tabcontent"
         android:layout_width="match_parent"
@@ -92,7 +81,7 @@
                     android:layout_marginBottom="8dp"
                     android:background="#FFFFFF"
                     android:clickable="true"
-                    android:contextClickable="false"
+                    android:contextClickable="true"
                     android:orientation="horizontal"
                     android:padding="8dp">
 
@@ -185,7 +174,8 @@
                         android:layout_height="wrap_content"
                         android:background="#FFFFFF"
                         android:orientation="horizontal"
-                        android:padding="8dp">
+                        android:padding="8dp"
+                        android:paddingBottom="8dp">
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -202,6 +192,7 @@
                                 android:layout_weight="9"
                                 android:paddingLeft="8dp"
                                 android:text="Mood"
+                                android:onClick="log_out"
                                 android:textColor="#FFFFFF"
                                 android:textSize="20sp" />
 
@@ -368,54 +359,4 @@
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#000">
-
-        <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@android:drawable/ic_dialog_email"
-                android:text="Your Mom" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@android:drawable/ic_dialog_email"
-                android:text="Your Mom" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@android:drawable/ic_dialog_email"
-                android:text="Your Mom" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@android:drawable/ic_dialog_email"
-                android:text="Your Mom" />
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@android:drawable/ic_dialog_email"
-                android:text="Your Mom" />
-        </TabWidget>
-    </LinearLayout>
-
 </LinearLayout>
