--- a/app/src/main/res/layout/content_splash_screen.xml
+++ b/app/src/main/res/layout/content_splash_screen.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.priyanshu.crumbs.SplashScreen"
-    tools:showIn="@layout/activity_splash_screen">
+    tools:showIn="@layout/activity_splash_screen"
+    android:background="@drawable/splash_bg">
 
     <ImageView
         android:layout_width="90dp"
@@ -36,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Crumbs"
-        android:textSize="64sp"
+        android:textColor="#FFF"
+        android:textSize="60sp"
         android:layout_alignBottom="@+id/pizza"
         android:layout_toRightOf="@+id/pizza"
         android:layout_toEndOf="@+id/pizza"
