--- a/app/src/main/res/layout/start_order_activity.xml
+++ b/app/src/main/res/layout/start_order_activity.xml
@@ -158,6 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:text="Submit"
-            android:textColor="#FFF" />
+            android:textColor="#FFF"
+            android:onClick="openPayment"/>
 
     </LinearLayout>
