--- a/app/src/main/res/layout/activity_add_friends.xml
+++ b/app/src/main/res/layout/activity_add_friends.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/friends_list_search"
         android:singleLine="true"
+        android:hint="Enter friend's name :"
         android:textColor="#000"/>
     <ListView
         android:layout_width="match_parent"
