--- a/app/src/main/res/layout/activity_list_restaurant.xml
+++ b/app/src/main/res/layout/activity_list_restaurant.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rest_name"
+        android:singleLine="true"
         android:textColor="@android:color/black"/>
     <ListView
         android:layout_width="match_parent"
