--- a/app/src/main/res/layout/activity_show_friends.xml
+++ b/app/src/main/res/layout/activity_show_friends.xml
@@ -7,9 +7,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.priyanshu.crumbs.ShowFriends">
+    tools:context="com.example.priyanshu.crumbs.TabBarActivity">
 <ListView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/lv_show_friends"/>
+
+    <ImageButton
+        android:id="@+id/fab"
+        android:background="#fff"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom|end"
+        android:src="@android:drawable/ic_menu_edit"
+        android:layout_alignBottom="@+id/lv_show_friends"
+        android:layout_alignRight="@+id/lv_show_friends"
+        android:layout_alignEnd="@+id/lv_show_friends"
+        android:backgroundTint="@color/colorPrimaryDark"/>
 </RelativeLayout>
